--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,7 @@ oauthclients_to_update:
     update: true
     name: 'cluster'
     timeout: '15m'
+    maxage: '1800'
   console-client:
     update: true
     name: 'console'
